GPUS-Kubernetes/kubernetes-basics-to-advanced-main/gateway-api-demo/phase-3-production/01-structure-for-production/k8s/base/apps.yaml
---
# ================================
# FRONTEND APP
# ================================
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
---
# ================================
# API APP
# ================================
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: api-app
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
